# SongLyrics

./: app.py  pyproject.toml  testes.ipynb
